cli/tests/snapshots/cli__run_images@add_line2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/add_line2.py
---
<svg width="60" height="60" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 10 10 L 50 10 L 50 50 L 10 50 Z" fill="rgba(128, 128, 128, 1.0)" />
    <path d="M 0.5 60.5 L 60.5 0.5" fill="none" stroke="rgba(128, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
  </g>
</svg>
