cli/tests/snapshots/cli__run_images@add_line3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/add_line3.py
---
<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0 0 L 100 0 L 100 100 L 0 100 Z" fill="rgba(85, 107, 47, 1.0)" />
    <path d="M 25 25 L 75 75" fill="none" stroke="rgba(218, 165, 32, 1.0)" stroke-width="30" stroke-linecap="round" stroke-linejoin="round" />
  </g>
</svg>
