cli/tests/snapshots/cli__run_images@add_solid_curve1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/add_solid_curve1.py
---
<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.5 0.5 L 100.5 0.5 L 100.5 100.5 L 0.5 100.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
    <path d="M 20 20 C 48.255987 20 51.744013 80 80 80 Z" fill="rgba(255, 0, 0, 1.0)" />
  </g>
</svg>
