cli/tests/snapshots/cli__run_images@beside1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/beside1.py
---
<svg width="80" height="70" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 20 35 A 10 35 0 0 1 0 35 A 10 35 0 0 1 20 35 Z" fill="rgba(211, 211, 211, 1.0)" />
        <path d="M 40 35 A 10 25 0 0 1 20 35 A 10 25 0 0 1 40 35 Z" fill="rgba(169, 169, 169, 1.0)" />
      </g>
      <path d="M 60 35 A 10 15 0 0 1 40 35 A 10 15 0 0 1 60 35 Z" fill="rgba(105, 105, 105, 1.0)" />
    </g>
    <path d="M 80 35 A 10 5 0 0 1 60 35 A 10 5 0 0 1 80 35 Z" fill="rgba(0, 0, 0, 1.0)" />
  </g>
</svg>
