cli/tests/snapshots/cli__run_images@beside_align1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/beside_align1.py
---
<svg width="80" height="70" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 20 35 A 10 35 0 0 1 0 35 A 10 35 0 0 1 20 35 Z" fill="rgba(176, 196, 222, 1.0)" />
        <path d="M 40 45 A 10 25 0 0 1 20 45 A 10 25 0 0 1 40 45 Z" fill="rgba(123, 104, 238, 1.0)" />
      </g>
      <path d="M 60 55 A 10 15 0 0 1 40 55 A 10 15 0 0 1 60 55 Z" fill="rgba(106, 90, 205, 1.0)" />
    </g>
    <path d="M 80 65 A 10 5 0 0 1 60 65 A 10 5 0 0 1 80 65 Z" fill="rgba(0, 0, 128, 1.0)" />
  </g>
</svg>
